# simdjson-playground

./: Cargo.toml
src/: main.rs
