[package]
name = "zcapjson"
version = "0.1.0"
authors = ["Amanjeev Sethi <aj@amanjeev.com>"]
edition = "2018"

[build]
rustflags = [
    "-C", "target-cpu=native",
    "-C", "target-feature=+avx,+avx2,+sse4.2",
]

[target.'cfg(any(target_arch = "x86", target_arch = "x86_64"))']
rustflags = [
    "-C", "target-cpu=native",
    "-C", "target-feature=+avx,+avx2,+sse4.2",
]

rustc-args = ["-C target-feature=+avx,+avx2,+sse4.2"]


[dependencies]
serde = "1.0.125"
serde_json = "1.0.64"
serde_derive = "1.0.125"
simd-json = { version = "0.4", features = ["allow-non-simd", "known-key", "serde_impl"] }