[package]
name = "zcapjson"
version = "0.1.0"
authors = ["Amanjeev Sethi <aj@amanjeev.com>"]
edition = "2018"

[dependencies]
serde = "1.0.125"
serde_json = "1.0.64"
serde_derive = "1.0.125"
simd-json = { version = "0.4", features = ["allow-non-simd", "known-key", "serde_impl"] }
rand = "0.8.3"
rayon = "1.5"